--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ google_ad_slot           :
 author:
   name             : "Dan Wyks"
   avatar           : "Dan.JPG"
-  bio              : "I am a work in progress."
+  bio              : "I am a work in progress ... like this blog."
   location         : "Denver, CO"
   email            :
   uri              :
